syntax = "proto3";

package tt.fsd.proto;

// Factory System Descriptor (FSD) message
message FactorySystemDescriptor {
    message Hostnames {
      repeated string hostname = 1;
    }

    message BoardLocationType {
        int32 host_id = 1;
        int32 tray_id = 2;
        string board_type = 3;
    }

    message BoardTypes {
      repeated BoardLocationType board_locations = 1;
    }

    message EndPoint {
        int32 host_id = 1;
        int32 tray_id = 2;
        int32 asic_index = 3;
        int32 chan_id = 4;
    }

    message Connection {
        EndPoint ep_a = 1;
        EndPoint ep_b = 2;
    }

    message EthConnections {
        repeated Connection connection = 1;
    }
    Hostnames hostnames = 1;
    BoardTypes board_types = 2;
    EthConnections eth_connections = 3;
}
